--- a/src/components/style/SinglePost.css
+++ b/src/components/style/SinglePost.css
@@ -1,39 +1,34 @@
 .post-container {
-  max-width: 800px;
-  margin: 20px auto;
-  padding: 2x;
+  margin: 20px auto; /* Center the container horizontally */
+  padding: 20px 0; /* Add padding to the top and bottom only */
+  border: 1px solid #ccc;
+  border-radius: 5px;
   background-color: #fff;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-  height: 100%;
-}
-.card-header {
-  font-size: 24px;
-  font-weight: bold;
-  margin-bottom: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  width: 80%; /* Set the width to 80% */
 }
 
-.card-body {
-  font-size: 16px;
-  line-height: 1.6;
+.post-container h1 {
+  margin: 10px 40px; /* Add margin to the h1 element */
 }
 
-.card-footer {
-  font-size: 12px;
-  color: #888;
-  margin-top: 20px;
+.post-container p {
+  margin: 15px 40px; /* Add margin to the top and bottom */
+}
+
+.post-footer time {
+  margin: 15px 40px; /* Add margin to the top and bottom */
+  font-weight: bolder;
 }
 
 .alert {
-  margin: 20px 0;
-  padding: 15px;
-  border: 1px solid #dc3545;
-  border-radius: 4px;
-  color: #dc3545;
-  background-color: #f8d7da;
+  margin: 20px;
+  padding: 10px;
+  border-radius: 5px;
 }
 
-.loading {
-  text-align: center;
-  font-size: 18px;
-  margin-top: 20px;
+.alert-danger {
+  background-color: #f8d7da;
+  color: #721c24;
+  border: 1px solid #f5c6cb;
 }
