--- a/src/style/Footer.css
+++ b/src/style/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #50b8dc;
+  background-color: #333;
   color: #fff;
   padding: 20px;
   text-align: center;
@@ -9,7 +9,7 @@
 }
 
 .footer p {
-  color: #000;
+  color: #fff;
   text-decoration: none;
   font-weight: bolder;
   font-size: 20px;
