--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -9,10 +9,11 @@
 }
 
 .search-container input[type="text"] {
-  width: 400px;
+  width: 100%;
+  max-width: 400px;
   height: 30px;
   padding: 10px;
-  border: 2px solid #000;
+  border: 2px solid #333;
   border-radius: 5px;
   font-size: 20px;
   font-weight: bolder;
@@ -26,15 +27,15 @@
   margin-top: 40px;
   margin-bottom: 40px; /* Add margin to create spacing at the bottom */
   margin-left: 16px;
+  margin-right: 16px;
 }
-
 
 .card {
   border: 1px solid #ccc;
   border-radius: 5px;
   overflow: hidden;
   width: 100%;
-  height: 250px; /* Set a fixed height for the cards */
+  height: 100%; /* Remove the fixed height for the cards */
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -45,17 +46,17 @@
 
 .card-header {
   padding: 10px;
-  background-color: #50b8dc;
+  background-color: #333;
   color: #fff; /* Set the text color for the header */
 }
 
-.card-header a{
-  color: #000;
+.card-header a {
+  color: #fff;
   text-decoration: none;
 }
 
-
 .card-body {
+  flex-grow: 1; /* Allow the card body to grow and fill the available space */
   padding: 10px;
   display: flex;
   flex-direction: column;
@@ -70,8 +71,9 @@
 }
 
 .card-footer {
+  height: 25px;
   padding: 10px;
-  background-color: #50b8dc;
+  background-color: #333;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -81,7 +83,7 @@
 }
 
 .card-footer time {
-  color: black;
+  color: #fff;
   font-weight: bold;
 }
 
@@ -106,11 +108,20 @@
 /* Media query for smaller screen sizes */
 @media (max-width: 600px) {
   .search-container input[type="text"] {
-    width: 100%; /* Set the width to 100% for smaller screens */
-    max-width: 300px; /* Limit the maximum width of the input field */
+    width: 80%; /* Set the width to 100% for smaller screens */
+    max-width: none; /* Remove the maximum width for the input field */
   }
-  
+
   .posts-container {
     grid-template-columns: 1fr; /* Display one column for smaller screens */
+    margin-left: 0; /* Remove the left margin for the container */
+    margin-right: 0; /* Remove the right margin for the container */
   }
+
+  .card {
+    height: auto; /* Set the height to auto to allow variable card height */
+    width: 90%
+  }
+
+  
 }
