--- a/src/style/updatePost.css
+++ b/src/style/updatePost.css
@@ -1,37 +1,66 @@
 .modal-auto {
-    width: 80%;
-    max-width: 800px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  
-  .modal-auto .modal-content {
-    height: 80vh;
-  }
-  
+  width: 80%;
+  max-width: 800px;
+  max-height: 700px;
+  margin: 0 auto;
+  position: absolute;
+  top: 54%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  padding: 20px;
+  z-index: 1050;
+}
+
+.modal-auto .modal-content {
+  height: 80vh;
+}
+
 .form-group {
-    margin-bottom: 1rem;
-  }
-  
-  label {
-    display: block;
-    font-weight: bold;
-    margin-bottom: 0.5rem;
-  }
-  
-  input[type="text"],
-  textarea {
-    width: 100%;
-    padding: 0.5rem;
-    border-radius: 4px;
-    border: 1px solid #ced4da;
-  }
-  
-  .postcontent {
-    margin-top: 1rem;
-  }
-  
-  .alert {
-    margin-top: 1rem;
-  }
-  
+  margin-bottom: 1.5rem;
+}
+
+label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+}
+
+input[type="text"],
+textarea {
+  width: 100%;
+  padding: 0.5rem;
+  border-radius: 4px;
+  border: 1px solid #ced4da;
+  resize: vertical;
+}
+
+.postcontent {
+  margin-top: 1.5rem;
+}
+
+.alert {
+  margin-top: 1rem;
+}
+
+/* UpdatePost.css */
+
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Adjust the opacity as desired */
+  z-index: 1040; /* Ensure the backdrop is below the modal */
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+}
+
+.modal-backdrop.show {
+  opacity: 1;
+  visibility: visible;
+}
