--- a/src/style/Buttons.css
+++ b/src/style/Buttons.css
@@ -41,6 +41,7 @@
   color: white;
   background-color: red;
   margin-right: 15px;
+  font-family: 'Roboto slab';
 }
 .btn-delete-cancel{
   position: relative;
@@ -57,6 +58,27 @@
   color: white;
   background-color: grey;
   margin-right: 15px;
+  font-family: 'Roboto slab';
+}
+
+.btn-login,
+.btn-update2,
+.btn-create {
+  position: relative;
+  font-size: 14px;
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 5px 25px;
+  display: inline-block;
+  border-radius: 6em;
+  transition: all .2s;
+  border: none;
+  font-family: inherit;
+  font-weight: 500;
+  color: white;
+  background-color: black;
+  margin-right: 15px;
+  font-family: 'Roboto slab';
 }
 
 .btn-delete-confirm:hover, 
