--- a/src/style/Footer.css
+++ b/src/style/Footer.css
@@ -1,7 +1,7 @@
 .footer {
   background-color: #333;
   color: #fff;
-  padding: 20px;
+  padding: 10px;
   text-align: center;
   width: 100%;
   position: fixed;
@@ -12,6 +12,7 @@
   color: #fff;
   text-decoration: none;
   font-weight: bolder;
-  font-size: 20px;
+  font-size: 15px;
   margin: 0; /* Remove any default margin */
+  font-family: 'Roboto slab';
 }
