--- a/src/style/GlobalStyle.css
+++ b/src/style/GlobalStyle.css
@@ -1,17 +1,13 @@
-@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 body {
-	font-family: 'Poppins', sans-serif;
-	background: #fafafa;
-}
+	height: 100vh;
+	margin: 0;
+	padding: 0;
+  }
+  
+  
 
-p {
-	font-family: 'Poppins', sans-serif;
-	font-size: 1.1em;
-	font-weight: 300;
-	line-height: 1.7em;
-	color: #999;
-}
 
 a,
 a:hover,
@@ -85,9 +81,7 @@ a:focus {
 	width: 100px;
 }
 
-.posts-container {
-	margin-left: 16px;
-}
+
 
 .post-content img{
 	width: 100%;
