--- a/src/style/Profile.css
+++ b/src/style/Profile.css
@@ -11,8 +11,10 @@
   font-size: 24px;
   font-weight: bold;
   margin-bottom: 20px;
+  font-family: 'Roboto slab';
 }
 
 p {
   margin-bottom: 10px;
+  font-family: 'Roboto';
 }
