--- a/src/style/SinglePost.css
+++ b/src/style/SinglePost.css
@@ -6,19 +6,23 @@
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   width: 80%; /* Set the width to 80% */
+  
 }
 
 .post-container h1 {
   margin: 10px 40px; /* Add margin to the h1 element */
+  font-family: 'Roboto slab';
 }
 
 .post-container p {
   margin: 15px 40px; /* Add margin to the top and bottom */
+  font-family: 'Roboto';
 }
 
 .post-footer time {
   margin: 15px 40px; /* Add margin to the top and bottom */
   font-weight: bolder;
+  font-family: 'Roboto slab';
 }
 
 .alert {
