--- a/src/style/updatePost.css
+++ b/src/style/updatePost.css
@@ -12,6 +12,9 @@
   border-radius: 5px;
   padding: 20px;
   z-index: 1050;
+  font-family: 'Roboto slab';
+  font-size: 25px;
+  font-weight: bold;
 }
 
 .modal-auto .modal-content {
@@ -26,6 +29,8 @@ label {
   display: block;
   font-weight: bold;
   margin-bottom: 0.5rem;
+  font-family: 'Roboto slab';
+  font-size: 25px;
 }
 
 input[type="text"],
@@ -35,6 +40,9 @@ textarea {
   border-radius: 4px;
   border: 1px solid #ced4da;
   resize: vertical;
+  font-family: 'Roboto slab';
+  font-size: 15px;
+  
 }
 
 .postcontent {
