--- a/src/style/Buttons.css
+++ b/src/style/Buttons.css
@@ -1,12 +1,14 @@
 .btn-read-more,
 .btn-delete,
-.btn-update{
+.btn-update {
   position: relative;
   font-size: 14px;
   text-transform: uppercase;
   text-decoration: none;
   padding: 5px 25px;
-  display: inline-block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border-radius: 6em;
   transition: all .2s;
   border: none;
@@ -15,6 +17,7 @@
   color: black;
   background-color: white;
   margin-right: 15px;
+  width: 75px; /* Set the desired width for the buttons */
 }
 
 
@@ -83,4 +86,16 @@
 .btn-create:hover {
   transform: translateY(-3px);
   cursor: pointer;
+}
+
+
+
+@media (max-width: 600px) {
+  .btn-read-more,
+  .btn-delete,
+  .btn-update {
+    width: auto;
+    padding: 5px 15px;
+    font-size: 12px;
+  }
 }
