--- a/src/style/SinglePost.css
+++ b/src/style/SinglePost.css
@@ -42,3 +42,21 @@
   color: #721c24;
   border: 1px solid #f5c6cb;
 }
+
+@media (max-width: 600px) {
+  .post-container {
+    width: 90%;
+    margin-top: 20px;
+    margin-bottom: 40px;
+  }
+  
+  .post-container h1,
+  .post-container p,
+  .post-footer {
+    margin: 10px 20px;
+  }
+
+  .post-container h1 {
+    font-size: 25px;
+  }
+}
