--- a/src/style/GlobalStyle.css
+++ b/src/style/GlobalStyle.css
@@ -1,153 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 html {
-	height: 100%;
-  }
-
-  body {
-	display: flex;
-	flex-direction: column;
-	min-height: 100vh;
-	margin: 0;
-	padding: 0;
-  }
-  
-  
-
-
-a,
-a:hover,
-a:focus {
-	color: inherit;
-	text-decoration: none;
-	transition: all 0.3s;
+  height: 100%;
 }
 
-.container.blog {
-	max-width: 960px;
-}
-
-
-.main-container {
-	display: flex;
-	flex-direction: column;
-	min-height: 100vh;
-  }
-  
-  
-
-
-/**
- * Content.
- */
-#content {
-	width: calc(100% - 250px);
-	min-height: 100vh;
-	transition: all 0.3s;
-	position: absolute;
-	top: 0;
-	right: 0;
-}
-
-#content.active {
-	width: 100%;
-}
-
-/**
- * Media Query.
- */
-@media (max-width: 768px) {
-	#sidebar {
-		margin-left: -250px;
-	}
-	#sidebar.active {
-		margin-left: 0;
-	}
-	#content {
-		width: 100%;
-	}
-	#content.active {
-		width: calc(100% - 250px);
-	}
-	#sidebarCollapse span {
-		display: none;
-	}
-}
-
-.loader {
-	position: absolute;
-	left: 0;
-	right: 0;
-	top: 0;
-	bottom: 0;
-	margin: auto;
-	width: 100px;
-}
-
-
-
-
-@media only screen and (max-width: 1020px) {
-
-	.navbar-expand-lg .navbar-nav {
-		flex-direction: row;
-	}
-
-	.navbar-expand-lg .nav-item {
-		padding-right: 16px;
-	}
-}
-
-
-
-
-
-/*Post Loader css*/
-@keyframes gradientBG {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
-}
-
-.loader-title {
-	display: block;
-	height: 54px;
-	background-image: linear-gradient(-45deg, #fff, #f3f4f4, #fff, #f3f4f4 );
-	background-size: 400% 400%;
-	animation: gradientBG 3s ease infinite;
-}
-
-.loader-img {
-	display: block;
-	height: 300px;
-	background-image: linear-gradient(-45deg, #fff, #f3f4f4, #fff, #f3f4f4 );
-	background-size: 400% 400%;
-	animation: gradientBG 3s ease infinite;
-}
-
-.loader-excerpt {
-	display: block;
-	height: 100px;
-	background-image: linear-gradient(-45deg, #fff, #f3f4f4, #fff, #f3f4f4 );
-	background-size: 400% 400%;
-	animation: gradientBG 3s ease infinite;
-}
-
-.loader-author,
-.loader-date,
-.loader-category {
-	display: block;
-	width: 100px;
-	height: 24px;
-	background-image: linear-gradient(-45deg, #fff, #f3f4f4, #fff, #f3f4f4 );
-	background-size: 400% 400%;
-	animation: gradientBG 3s ease infinite;
-	margin-right: 20px;
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
 }
