--- a/src/style/Login.css
+++ b/src/style/Login.css
@@ -7,14 +7,14 @@
   max-width: 400px;
   margin: 0 auto;
   margin-top: 80px;
-  height: 350px; /* Adjust the height as needed */
+  height: 350px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 8px; /* Added border-radius */
+  border: 1px solid #333;
+  border-radius: 8px;
   background-color: #fff;
   font-family: 'Roboto slab';
   font-size: 25px;
