--- a/src/style/Footer.css
+++ b/src/style/Footer.css
@@ -13,6 +13,6 @@
   text-decoration: none;
   font-weight: bolder;
   font-size: 15px;
-  margin: 0; /* Remove any default margin */
+  margin: 0;
   font-family: 'Roboto slab';
 }
