--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -24,10 +24,10 @@
 
 .posts-container {
   display: grid;
-  grid-template-columns: repeat(2, 1fr); /* Display two columns by default */
-  gap: 20px; /* Increase the gap value for more spacing between cards */
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
   margin-top: 40px;
-  margin-bottom: 80px; /* Add margin to create spacing at the bottom */
+  margin-bottom: 80px;
   margin-left: 16px;
   margin-right: 16px;
 }
@@ -37,19 +37,18 @@
   border-radius: 5px;
   overflow: hidden;
   width: 100%;
-  height: 200px; /* Remove the fixed height for the cards */
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   position: relative;
-  background-color: #f8f9fa; /* Set the background color for the card */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add a subtle box shadow for depth */
+  background-color: #f8f9fa;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .card-header {
   padding: 10px;
   background-color: #333;
-  color: #fff; /* Set the text color for the header */
+  color: #fff;
   font-family: 'Roboto slab';
 }
 
@@ -59,25 +58,18 @@
 }
 
 .card-body {
-  flex-grow: 1; /* Allow the card body to grow and fill the available space */
+  flex-grow: 1;
   padding: 10px;
   display: flex;
   flex-direction: column;
-  margin: 0; /* Remove the top margin */
+  margin: 0;
 }
 
 .card-text.post-content {
   margin-bottom: 0;
   line-height: 1.5;
-  color: #333; /* Set the text color for the card content */
-  text-decoration: none; /* Remove text decoration */
-}
-
-.card-text.post-content p{
-  margin-bottom: 0;
-  line-height: 1.5;
-  color: #333; /* Set the text color for the card content */
-  text-decoration: none; /* Remove text decoration */
+  color: #333;
+  text-decoration: none;
   font-family: 'Roboto';
 }
 
@@ -92,30 +84,29 @@
   bottom: 0;
   width: 100%;
   font-family: 'Roboto slab';
-  font-size: 14px; /* Adjust the font size as desired */
+  font-size: 14px;
 }
 
 .card-footer time {
   color: #fff;
   font-weight: bold;
-  font-size: 14px; /* Add a font size for smaller screens */
+  font-size: 14px;
 }
 
-/* Media query for smaller screen sizes */
 @media (max-width: 600px) {
   .search-container input[type="text"] {
-    width: 80%; /* Set the width to 100% for smaller screens */
-    max-width: none; /* Remove the maximum width for the input field */
+    width: 80%;
+    max-width: none;
   }
 
   .posts-container {
-    grid-template-columns: 1fr; /* Display one column for smaller screens */
-    margin-left: 0; /* Remove the left margin for the container */
-    margin-right: 0; /* Remove the right margin for the container */
+    grid-template-columns: 1fr;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .card {
-    height: auto; /* Set the height to auto to allow variable card height */
+    height: auto;
     width: 90%;
   }
 
@@ -124,12 +115,13 @@
   }
   
   .card-footer {
-    height: auto; /* Set the height to auto for responsive height */
-    padding: 5px; /* Reduce the padding for smaller screens */
-    font-size: 12px; /* Adjust the font size for smaller screens */
-    position: static; /* Remove the absolute positioning */
+    height: auto;
+    padding: 5px;
+    font-size: 12px;
+    position: static;
   }
+  
   .card-footer time {
-    font-size: 10px; /* Adjust the font size for smaller screens */
+    font-size: 10px;
   }
 }
