--- a/src/style/Navbar.css
+++ b/src/style/Navbar.css
@@ -1,5 +1,3 @@
-/* Navbar.css */
-
 .navbar {
   display: flex;
   align-items: center;
@@ -67,22 +65,16 @@
 }
 
 .nav-links li a.active {
-  border-bottom: 2px solid #ffffff;
+  border-bottom: 2px solid #fff;
 }
 
 .nav-item {
   margin-right: 15px;
 }
 
-.nav-link {
-  color: #fff;
+a {
+  color: inherit;
   text-decoration: none;
-  font-size: 16px;
-  transition: opacity 0.3s ease;
-}
-
-.nav-link:hover {
-  opacity: 0.8;
 }
 
 /* Media Query for Small Screens */
@@ -110,7 +102,7 @@
     visibility: hidden;
     transition: opacity 0.3s ease;
     order: 2;
-    z-index: 1; /* New */
+    z-index: 1;
   }
 
   .nav-links.open {
@@ -118,8 +110,8 @@
     visibility: visible;
     position: absolute;
     top: 30px;
-    justify-content: center; /* Added */
-    align-items: center; /* Added */
+    justify-content: center;
+    align-items: center;
   }
 
   .nav-item {
