--- a/src/style/updatePost.css
+++ b/src/style/updatePost.css
@@ -12,11 +12,10 @@
   border-radius: 5px;
   padding: 20px;
   z-index: 1050;
-  font-family: 'Roboto slab';
+  font-family: "Roboto slab";
   font-size: 25px;
   font-weight: bold;
 }
-
 
 .modal-auto .modal-content {
   height: 80vh;
@@ -30,7 +29,7 @@ label {
   display: block;
   font-weight: bold;
   margin-bottom: 0.5rem;
-  font-family: 'Roboto slab';
+  font-family: "Roboto slab";
   font-size: 25px;
 }
 
@@ -41,9 +40,8 @@ textarea {
   border-radius: 4px;
   border: 1px solid #ced4da;
   resize: vertical;
-  font-family: 'Roboto slab';
+  font-family: "Roboto slab";
   font-size: 15px;
-  
 }
 
 .postcontent {
@@ -54,16 +52,14 @@ textarea {
   margin-top: 1rem;
 }
 
-/* UpdatePost.css */
-
 .modal-backdrop {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Adjust the opacity as desired */
-  z-index: 1040; /* Ensure the backdrop is below the modal */
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1040;
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.3s ease, visibility 0.3s ease;
@@ -74,9 +70,6 @@ textarea {
   visibility: visible;
 }
 
-
-
-/* Media query for smaller screens */
 @media (max-width: 600px) {
   .modal-auto {
     width: 90%;
